Fix alignment of the vertical lines in the posts lists

--- a/src/components/PostListItem/style.scss
+++ b/src/components/PostListItem/style.scss
@@ -50,7 +50,7 @@ $border-styling: dashed 1px $color-gray-border;
 @include breakpoint-sm {
     .post-item {
         display: flex;
-        align-items: baseline;
+        justify-content: flex-start;
 
         &:nth-child(2) {
             @include margin-top(1);
@@ -77,7 +77,8 @@ $border-styling: dashed 1px $color-gray-border;
             margin-right: 3rem;
             font-size: $typographic-base-font-size * 1.1;
             border-top: $border-styling;
-            padding-top: 1.1rem;
+            display: flex;
+            align-items: center;
             color: gray;
 
             .month {
